--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,12 @@
     "framer-motion": "^12.23.25",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.10.1"
+    "react-modal": "^3.16.3",
+    "react-modern-modal": "^1.0.7",
+    "react-router-dom": "^7.10.1",
+    "sweetalert2": "^11.26.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
